# cpp_backend_develop_template

./: .clang-tidy  .env.dev  .gitignore  .gitmodules  .suppressions.txt  CMakeLists.txt  README.md
cmake/: 3dparty.cmake  fmt.cmake  lint.cmake  unittest.cmake
cmake/toolchain/: clang.cmake  gcc.cmake  msvc.cmake
inc/: common.h  equal_i32.h  errmaner.h  errordata.h  logmaner.h  max_i32.h  singleton.h  verdata.h  vermaner.h
src/: equal_i32.cpp  main.cpp  max_i32.cpp
tests/: test1.cpp  test2.cpp
